OO-3347: notify the course controller of score changes in check list